@@ -108,11 +108,6 @@ start_armor: 2301
 // Starting zeny for new characters
 start_zeny: 0
 
-// Guild earned exp modifier.
-// Adjusts taxed exp before adding it to the guild's exp. For example, if set 
-// to 200, the guild receives double the player's taxed exp.
-guild_exp_rate: 100
-
 // Name used for unknown characters
 unknown_char_name: Unknown
 
